[package]
name = "task_tracker"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Winthropp <rwinthrop1997@gmail.com"]
description = "A simple task tracker application using Druid and IM."
license = "MIT"
readme = "README.md" #currently no README
keywords = ["task", "tracker", "druid", "im"]
categories = ["GUI", "Utility"]

[dependencies]
druid = {version = "0.8.3", features = ["im"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
im = { version = "15.0", features = ["serde"] }